<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Science Journal</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_archive_experiment">Archive experiment</string>
    <string name="action_unarchive_experiment">Unarchive experiment</string>
    <string name="action_archive_run">Archive</string>
    <string name="action_unarchive_run">Unarchive</string>
    <string name="action_delete">Delete</string>
    <string name="action_ruler">Ruler</string>
    <string name="action_level">Level</string>
    <string name="sine_wave">Sine wave</string>
    <string name="vel">Velocity</string>
    <string name="acc_x">Accelerometer X</string>
    <string name="acc_y">Accelerometer Y</string>
    <string name="acc_z">Accelerometer Z</string>
    <string name="ambient_light">Ambient light</string>
    <string name="magnetic_field_strength">Magnetometer</string>
    <string name="barometer">Barometer</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="video_stream">Video stream</string>
    <string name="vel_units">m/s</string>
    <string name="acc_units">m/s\u00B2</string>
    <string name="ambient_light_units">lux</string>
    <string name="magnetic_strength_units">μT</string>
    <string name="decibel_units">dB</string>
    <string name="hertz_units">Hz</string>
    <string name="rpm_units">RPM</string>
    <string name="voltage_units">V</string>
    <string name="raw_units">%</string>
    <string name="barometer_units">hPa</string>
    <string name="temperature_units">\u00B0C</string>
    <string name="header_name_and_units"><xliff:g id="sensor_name">%1$s</xliff:g> (<xliff:g id="sensor_units">%2$s</xliff:g>)</string>
    <string name="experiment_details">Experiment details</string>
    <string name="add_sensor" translatable="false">@string/title_activity_sensor_settings</string>
    <string name="snackbar_source_error">Error occurred when connecting to this source: <xliff:g id="error_text">%1s</xliff:g></string>
    <string name="action_retry">Retry</string>
    <string name="decibel">Sound intensity</string>
    <string name="pitch">Pitch</string>
    <string name="title_activity_ruler">Ruler</string>
    <string name="ruler_label_metric"><xliff:g id="length_value">%1$.2f</xliff:g> mm</string>
    <string name="ruler_label_imperial"><xliff:g id="length_value">%1$.2f</xliff:g> in</string>
    <string name="title_activity_level">Level</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="action_end_calibrate">End calibration</string>
    <string name="title_calibrate">Calibrate with\u2026"</string>
    <string name="calibration_credit_card">Credit card (height)</string>
    <string name="calibration_ruler_imperial">Ruler (3in)</string>
    <string name="calibration_ruler_metric">Ruler (80mm)</string>
    <string name="btn_add_experiment_note_description">Add experiment note</string>
    <string name="btn_add_run_note_description">Add trial note</string>
    <string name="btn_record_description">Start recording</string>
    <string name="btn_stop_description">Stop recording</string>
    <string name="btn_record_label">Record</string>
    <string name="btn_stop_label">Stop</string>
    <string name="unknown_sensor">Unknown sensor</string>
    <string name="recording_start_failed">Recording could not be started, please try again</string>
    <string name="recording_start_failed_disconnected">Cannot start recording because a sensor is disconnected. Please try again.</string>
    <string name="recording_stop_failed_no_data_title">Data is not being recorded</string>
    <string name="recording_stop_failed_no_data">One or more of your sensors did not record any data. Would you like to cancel this recording?</string>
    <string name="recording_stop_failed_continue">Continue</string>
    <string name="recording_stop_failed_cancel">Cancel recording</string>
    <string name="recording_stop_failed_disconnected">Cannot stop recording because a sensor is disconnected. Would you like to cancel this recording?</string>
    <string name="recording_stop_failed_save">Could not stop recording or save trial. Please try again.</string>
    <string name="label_failed_save">Could not save.</string>
    <string name="elapsed_time_short_format"><xliff:g id="seconds">%1d</xliff:g>s</string>
    <string name="elapsed_time_long_format"><xliff:g id="minutes">%1$d</xliff:g>min <xliff:g id="seconds">%2$d</xliff:g>s</string>
    <string name="accessible_elapsed_time_short_format"><xliff:g id="seconds">%1d</xliff:g> seconds</string>
    <string name="accessible_elapsed_time_long_format"><xliff:g id="minutes">%1$d</xliff:g> minutes <xliff:g id="seconds">%2$d</xliff:g> seconds</string>
    <string name="elapsed_time_axis_format_extra_small"><xliff:g id="seconds">%1$d</xliff:g></string>
    <string name="elapsed_time_axis_format_small"><xliff:g id="minutes">%1$d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g></string>
    <string name="elapsed_time_axis_format_large"><xliff:g id="hours">%1$d</xliff:g>:<xliff:g id="minutes">%2$02d</xliff:g>:<xliff:g id="seconds">%3$02d</xliff:g></string>
    <string name="elapsed_time_axis_format_small_tenths"><xliff:g id="minutes">%1$d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g>.<xliff:g id="tenths">%3$1d</xliff:g></string>
    <string name="elapsed_time_axis_format_large_tenths"><xliff:g id="hours">%1$d</xliff:g>:<xliff:g id="minutes">%2$02d</xliff:g>:<xliff:g id="seconds">%3$02d</xliff:g>.<xliff:g id="tenths">%4$1d</xliff:g></string>
    <string name="graph_exploring_seekbar_content_description"><xliff:g id="time">%1$s</xliff:g>, <xliff:g id="value">%2$s</xliff:g> <xliff:g id="units">%3$s</xliff:g>.</string>
    <string name="picture_note_description">Picture from recording</string>
    <string name="picture_note_preview_content_description">Picture note preview</string>
    <string name="navigation_drawer_content_description">Show navigation drawer</string>
    <string name="navigation_item_activities">Activities</string>
    <string name="activities_url" translatable="false">https://makingscience.withgoogle.com/science-journal/activities?utm_source=android</string>
    <string name="browser_not_found">Install a web browser on your device to view this link.</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_testing_options">Testing options</string>
    <string name="title_activity_main">Science Journal - <xliff:g id="section">%s</xliff:g></string>
    <string name="title_activity_sensor_settings">Sensor settings</string>
    <string name="external_devices_paired">Paired devices</string>
    <string name="external_devices_pairing">Pairing\u2026</string>
    <string name="external_devices_available">Available devices</string>
    <string name="external_devices_settings_forget">Forget</string>
    <string name="progress_scanning">Scanning\u2026</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_options_title">No options for <xliff:g id="name">%1$s</xliff:g></string>
    <string name="no_options_message">No options can be set for <xliff:g id="name">%1$s</xliff:g></string>
    <string name="options_message">Set options for <xliff:g id="sensor_name">%1$s</xliff:g></string>
    <string name="sine_wave_frequency_option">Set sine wave frequency in milliseconds:</string>
    <string name="video_stream_fps_option">Set video stream recording rate in frames per second:</string>
    <string name="graph_name">the graph</string>
    <string name="graph_options">Graph options</string>
    <string name="graph_options_title">Graph options</string>
    <string name="graph_options_smoothness_edit">Smoothness</string>
    <string name="graph_options_window_edit">Blur size</string>
    <string name="graph_options_blur_edit">Blur type</string>
    <string name="graph_options_gaussian_sigma_edit">Standard deviation</string>
    <string name="blur_type_average">Average</string>
    <string name="blur_type_gaussian">Gaussian</string>
    <string name="graph_options_audio_feedback_enable">Enable audio</string>
    <string name="graph_options_audio_feedback_disable">Disable audio</string>
    <string name="stat_min">Minimum</string>
    <string name="stat_max">Maximum</string>
    <string name="stat_average">Average</string>
    <string name="stat_average_label">Average</string>
    <string name="stat_duration">Duration</string>
    <string name="stat_unknown">Unknown</string>
    <string name="btn_reset_description">Jump to now</string>
    <string name="export_action">Share</string>
    <string name="send_copy_action">Send a copy</string>
    <string name="export_run_chooser_title">Save to\u2026</string>
    <string name="export_experiment_chooser_title">Send Experiment</string>
    <string name="export_photo_chooser_title">Share photo to\u2026</string>
    <string name="experiment_not_finished_downloading_confirm_button">Share anyway</string>
    <string name="experiment_not_finished_downloading_confirm_download_button">Download anyway</string>
    <string name="experiment_not_finished_downloading_cancel_button">Cancel</string>
    <string name="experiment_not_finished_downloading_message">This experiment has not finished downloading all data. If you share a copy now, it will also be missing this data</string>
    <string name="experiment_missing_data_message">This experiment has unsynced data. If you download a copy now, it will be missing this data</string>
    <string name="btn_sensor_card_settings">Sensor settings</string>
    <string name="btn_sensor_card_close">Close card</string>
    <string name="device_options_sensor_label_text">Sensor</string>
    <string name="device_options_custom_sensor_pin_label_text">Pin</string>
    <string name="device_options_custom_sensor_frequency_checkbox_text">Frequency</string>
    <string name="delete_note_menu_item">Delete</string>
    <string name="delete_run">Delete</string>
    <string name="crop_run">Crop</string>
    <string name="add_experiment_note">Add note</string>
    <string name="title_edit_trial_activity">Edit Recording</string>
    <string name="include_archived_trials">Show archived recordings</string>
    <string name="menu_item_audio_settings">Audio settings</string>
    <string name="run_review_overflow_menu_content_description">More options</string>
    <string name="menu_item_set_triggers">Set triggers</string>
    <string name="trigger_type_label">Trigger type</string>
    <string name="trigger_when_label">Trigger when</string>
    <string name="trigger_value_hint">Value</string>
    <string name="trigger_note_text_label">Default note text</string>
    <string name="trigger_note_text_hint">What should your note say?</string>
    <string name="trigger_audio_alert">Sound</string>
    <string name="trigger_haptic_alert">Vibration</string>
    <string name="trigger_visual_alert">Visual notification</string>
    <string name="disable_all_triggers">Disable triggers</string>
    <string name="crop_overflow_menu_content_description">More options</string>
    <string name="edit_note_time_menu_item">Edit time</string>
    <string name="action_edit_photo">Edit photo</string>
    <string name="action_show_archived_experiments">Show archived experiments</string>
    <string name="action_hide_archived_experiments">Hide archived experiments</string>
    <string name="action_claim_unclaimed_experiments">Claim all</string>
    <string name="action_delete_unclaimed_experiments">Delete all</string>
    <string name="drive_sync_cannot_reach_google_drive">Can\'t reach Google Drive. Check your connection.</string>
    <string name="download_copy_action">Download</string>
</resources>